# mcp

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug.yaml  config.yaml  feature.yaml
.github/workflows/: unit_tests.yml
dev/: lint.sh
examples/custom-server/: README.md  app.yaml  databricks.yml  pyproject.toml
examples/custom-server/src/custom_server/: app.py  main.py
servers/developer_tools/: README.md  server.py
servers/developer_tools/src/developer_tools_mcp/: server-old.py
servers/developer_tools/src/developer_tools_mcp/tools/: sql_query.py
servers/unity_catalog/: README.md  pyproject.toml
servers/unity_catalog/src/mcp_server_unitycatalog/: __init__.py  __main__.py  cli.py  logging_config.py  server.py
servers/unity_catalog/src/mcp_server_unitycatalog/tools/: __init__.py  functions.py  genie.py  utils.py  vector_search.py
servers/unity_catalog/src/unitycatalog_mcp/: __init__.py  __main__.py  server.py
servers/unity_catalog/src/unitycatalog_mcp/tools/: __init__.py  base_tool.py  (+3 more)
servers/unity_catalog/tests/: conftest.py  test_cli.py  test_functions.py  test_genie.py  test_vector_search.py
src/databricks/labs/mcp/servers/developer_tools/: Dockerfile  README.md  pyproject.toml
src/databricks/labs/mcp/servers/developer_tools/src/: Dockerfile  requirements.txt  server.py
src/databricks/labs/mcp/servers/developer_tools/src/developer_tools_mcp/: __init__.py  __main__.py  server.py
src/databricks/labs/mcp/servers/developer_tools/src/developer_tools_mcp/tools/: __init__.py  base_tool.py  jobs.py  test_connection.py
(+1 files in other folders)
